// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PrivacyStatementPopupText renders 1`] = `
<DocumentFragment>
  You can change this choice anytime in settings. Read our 
  <mock-newtablink
    href="http://go.microsoft.com/fwlink/?LinkId=521839"
  >
    privacy statement
  </mock-newtablink>
   to learn more.
</DocumentFragment>
`;

exports[`PrivacyStatementText renders 1`] = `
<DocumentFragment>
  Read our 
  <mock-newtablink
    href="http://go.microsoft.com/fwlink/?LinkId=521839"
  >
    privacy statement
  </mock-newtablink>
   to learn more.
</DocumentFragment>
`;
